# reminders-beads-bridge

./: .gitignore  AGENTS.md  CLAUDE.md  GLOSSARY.md  README.md  pyproject.toml
.beads/: export-state.json  issues.jsonl  metadata.json
.claude/rules/: body-contract.md  voice-surfaces.md
.github/workflows/: deploy-docs.yml  pages.yml
docs/: AGENT.md  REFERENCE.md  architecture.mmd
launchd/: com.jurrejan.beads-bridge.plist  com.jurrejan.reminders-bridge.plist
site/: package.json  svelte.config.js
site/src/: app.css  app.html
site/src/lib/components/: Mermaid.svelte  Terminal.svelte  Wordmark.svelte
site/src/routes/: +layout.svelte  +page.svelte
site/src/routes/architecture/: +page.svelte
site/src/routes/install/: +page.svelte
src/beads_bridge/: __init__.py  activity.py  beads.py  captures.py  cli.py  config.py  daemon.py  launch.py  reminders.py  state.py  triggers.py  watcher.py
src/reminders_bridge/: activity.py  agent_marker.py  api.py  atomicio.py  beads.py  body.py  captures.py  cli.py  commands.py  config.py  daemon.py  dashboard.py  dashhtml.py  dashpages.py  events.py  fixer.py  ghostty.py  heartbeat.py  inject.py  launch.py  link.py  mailbox.py  migrate.py  mirror.py  navigation.py  noteguard.py  prime.py  primer.md  probe.py  procutil.py  projects.py  projects_list.py  readme.py  reminders.py  sandbox.py  server.py  serverctl.py  sessions.py  settings.py  snapshot.py  (+7 more)
testkit/: README.md  deny_hook.py  ekbase.py  ekconv.py  ekstore.py  evalkit.py  evals.py  mcp_server.py  run.py  scenarios.md  schemas.py  tools.py
(+4 files in other folders)
