[project]
name = "reminders-bridge"
version = "0.2.0"
description = "Sync Beads issues to Apple Reminders (1 bead = 1 reminder, per-project list)"
authors = [{ name = "JJ" }]
requires-python = ">=3.12"
dependencies = [
    "pyobjc-framework-EventKit>=10.3",
    "pyobjc-framework-Cocoa>=10.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
testkit = [
    "mcp>=1.2",
]

[project.scripts]
rbridge = "reminders_bridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reminders_bridge"]

[tool.ruff]
target-version = "py312"

[tool.mypy]
python-version = "3.12"
